finish stemming and lemmatization

--- a/Python Scripts/FullPreprocessing.ipynb
+++ b/Python Scripts/FullPreprocessing.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,20 +80,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "def is_noun(tag):\n",
-    "    return tag in ['NN', 'NNS', 'NNP', 'NNPS']\n",
+    "    return tag in ['NN', 'NNS', 'NNP', 'NNPS', 'FW']\n",
     "\n",
     "\n",
     "def is_verb(tag):\n",
-    "    return tag in ['VB', 'VBD', 'VBG', 'VBN', 'VBP', 'VBZ']\n",
+    "    return tag in ['VB', 'VBD', 'VBG', 'VBN', 'VBP', 'VBZ', 'MD']\n",
     "\n",
     "\n",
     "def is_adverb(tag):\n",
-    "    return tag in ['RB', 'RBR', 'RBS']\n",
+    "    return tag in ['RB', 'RBR', 'RBS', 'WRB']\n",
     "\n",
     "\n",
     "def is_adjective(tag):\n",
@@ -101,19 +101,23 @@
     "\n",
     "def penn_to_wn(tag):\n",
     "    if is_adjective(tag):\n",
+    "        # returns a\n",
     "        return wn.ADJ\n",
     "    elif is_noun(tag):\n",
+    "        # returns n\n",
     "        return wn.NOUN\n",
     "    elif is_adverb(tag):\n",
+    "        # returns r\n",
     "        return wn.ADV\n",
     "    elif is_verb(tag):\n",
+    "        # returns v\n",
     "        return wn.VERB\n",
     "    return None"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +129,7 @@
     "\n",
     "# Use full for BoF and others. \n",
     "# Use part in order to keep some data important if we need to match tuples from the text based on natual speach\n",
-    "path_swAni_full = \"/media/sf_Shared_Folder/stopwordsFULL.txt\"\n",
+    "path_swAni_full = \"/media/sf_Shared_Folder/stopwordsALL.txt\"\n",
     "path_swAni_part = \"/media/sf_Shared_Folder/stopwords.txt\"\n",
     "\n",
     "swFile = open(path_swAni_full, 'r', encoding = \"ISO-8859-1\")\n",
@@ -194,10 +198,43 @@
     "    else:\n",
     "        pass\n",
     "    \n",
-    "\n",
+    "    \n",
     "# function #4 - partOfSpeechTag Tagging\n",
+    "def rmStopWords(iFile, oPathNoExt):\n",
+    "    \n",
+    "    if not iFile.name.endswith(\"_tokens.txt\"):\n",
+    "        pass\n",
+    "    else:\n",
+    "        print(\"[Removing StopWords: ] \" + iFile.name)\n",
+    "        baseName = oPathNoExt.split(\".en\", 1)[0]\n",
+    "        # print(\"BASE NAME: \", baseName)\n",
+    "        OFName = baseName + \".en_noStopWordsALL.txt\"\n",
+    "        \n",
+    "        tokenList = iFile.read().split()\n",
+    "        \n",
+    "        with open(OFName, \"w\") as oFile:     \n",
+    "            final = []\n",
+    "            \n",
+    "            for tok in tokenList:\n",
+    "                if tok in stopWords:\n",
+    "                    # if token is a stop word, don't save in the output (skip)\n",
+    "                    pass\n",
+    "                else:\n",
+    "                    final.append(tok)\n",
+    "                    oFile.write(tok+\"\\n\")\n",
+    "            oFile.close()\n",
+    "            "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# function #5 - partOfSpeechTag Tagging\n",
     "def POStag(iFile, oPathNoExt):\n",
-    "    if iFile.name.endswith(\"_tokens.txt\"):\n",
+    "    if iFile.name.endswith(\"_noStopWordsALL.txt\"):\n",
     "        print(\"[Part of Speech tagging: ] \" + iFile.name)\n",
     "        baseName = oPathNoExt.split(\".en\", 1)[0]\n",
     "        # print(\"BASE NAME: \", baseName)\n",
@@ -225,62 +262,59 @@
     "        pass\n",
     "    \n",
     "\n",
-    "# function #4 - partOfSpeechTag Tagging\n",
-    "def rmStopWords(iFile, oPathNoExt):\n",
     "    \n",
-    "    if not iFile.name.endswith(\"_tokens.txt\"):\n",
-    "        pass\n",
-    "    else:\n",
-    "        print(\"[Removing StopWords: ] \" + iFile.name)\n",
-    "        baseName = oPathNoExt.split(\".en\", 1)[0]\n",
-    "        # print(\"BASE NAME: \", baseName)\n",
-    "        OFName = baseName + \".en_noStopWordsALL.txt\"\n",
-    "        \n",
-    "        tokenList = iFile.read().split()\n",
-    "        \n",
-    "        with open(OFName, \"w\") as oFile:     \n",
-    "            final = []\n",
-    "            \n",
-    "            for tok in tokenList:\n",
-    "                if tok in stopWords:\n",
-    "                    # if token is a stop word, don't save in the output (skip)\n",
-    "                    pass\n",
-    "                else:\n",
-    "                    final.append(tok)\n",
-    "                    oFile.write(tok+\"\\n\")\n",
-    "            oFile.close()\n",
-    "            \n",
+    "\"\"\"\n",
+    "Outputs data as a tuple (Word,WordNetPOSTag,Stem)\n",
     "\n",
+    "POS TAG: read line by line, split each line by (\",\"), write line[0] to the file with comma, following it\n",
+    "STEM: take line[1] and compare POS tag, return the appropriate POS tag as per Wordnet, i.e. \n",
+    "r for adverb\n",
+    "a for adjective\n",
+    "n for noun\n",
+    "v for verb\n",
+    "\"\"\"\n",
     "def stem(iFile, oPathNoExt):\n",
     "    stemmer = LancasterStemmer()\n",
     "    \n",
-    "    if not iFile.name.endswith(\"_tokPOStag.txt\"):\n",
+    "    #if not iFile.name.endswith(\"_tokPOStag.txt\"):\n",
+    "    if not iFile.name.endswith(\"NounVerbAdjectiveAdverb.txt\"):\n",
     "        pass\n",
     "    else:\n",
     "        print(\"[Stemming: ] \" + iFile.name)\n",
     "        baseName = oPathNoExt.split(\".en\", 1)[0]\n",
-    "        # print(\"BASE NAME: \", baseName)\n",
     "        OFName = baseName + \".en_stemmedbyPOS.txt\"\n",
     "        \n",
-    "        tokenList = iFile.read().split(\"[)]\")\n",
-    "        #tokenList = iFile.read().split()\n",
+    "        content = iFile.read().split()\n",
     "        \n",
-    "        with open(OFName, \"w\") as oFile:     \n",
-    "            stems = []\n",
-    "            tuples = []\n",
-    "            \n",
-    "            for tok in tokenList:\n",
-    "                tok = stemmer.stem(tok)\n",
-    "                stems.append(tok)\n",
+    "        with open(OFName, \"w\") as oFile:   \n",
+    "           \n",
+    "            for line in content:\n",
+    "                curline = line.split(\",\")    #list with 2 elements\n",
+    "                word = curline[0]\n",
+    "                posTag = curline[1]\n",
     "                \n",
-    "                oFile.write(tok)\n",
+    "                stem = stemmer.stem(word)\n",
+    "                \n",
+    "                if(penn_to_wn(posTag) == \"a\"):\n",
+    "                    oFile.write(word+\",a,\"+stem+\"\\n\")\n",
+    "                elif(penn_to_wn(posTag) == \"n\"):\n",
+    "                    oFile.write(word+\",n,\"+stem+\"\\n\")\n",
+    "                elif(penn_to_wn(posTag) == \"r\"):\n",
+    "                    oFile.write(word+\",r,\"+stem+\"\\n\")\n",
+    "                elif(penn_to_wn(posTag) == \"v\"):\n",
+    "                    oFile.write(word+\",v,\"+stem+\"\\n\")\n",
+    "                else:\n",
+    "                    pass\n",
+    "                \n",
     "            oFile.close() \n",
     "            \n",
-    "\n",
+    "# Requires the output from stem() and more specifically the POS tag in order to know what \n",
+    "# word to make out of the stem. If not specific, it assumes NOUN\n",
     "def lemmatize(iFile, oPathNoExt):\n",
     "    lemmatizer = WordNetLemmatizer()\n",
     "    \n",
-    "    if not iFile.name.endswith(\"_stemmed.txt\"):\n",
+    "    if not iFile.name.endswith(\"en_stemmedbyPOS.txt\"):\n",
+    "    #if not iFile.name.endswith(\"NounVerbAdjectiveAdverb.en_stemmedbyPOS.txt\"):\n",
     "        pass\n",
     "    else:\n",
     "        print(\"[Lemmatizing: ] \" + iFile.name)\n",
@@ -288,38 +322,48 @@
     "        # print(\"BASE NAME: \", baseName)\n",
     "        OFName = baseName + \".en_lemmatized.txt\"\n",
     "        \n",
-    "        tokenList = iFile.read().split()\n",
+    "        content = iFile.read().split()\n",
     "        \n",
-    "        with open(OFName, \"w\") as oFile:     \n",
-    "            final = []\n",
-    "            \n",
-    "            for tok in tokenList:\n",
-    "                lemma = lemmatizer.lemmatize(tok, pos='v')\n",
-    "                lemmas.append(lemma)\n",
+    "        #print(\"Word | Stem | Lemma | LemmaPOS\")\n",
+    "        #print(\"------------------------------\")\n",
+    "        with open(OFName, \"w\") as oFile:    \n",
+    "            for line in content:\n",
+    "                curline = line.split(\",\")    #list with 2 elements\n",
+    "                word = curline[0]\n",
+    "                posTag = curline[1]\n",
+    "                stem = curline[2]\n",
     "                \n",
-    "                #oFile.\n",
-    "            #oFile.close()  \n",
-    "                print(lemma)"
+    "                lemma = nltk.stem.WordNetLemmatizer().lemmatize(stem)\n",
+    "                lemmaPOS = nltk.stem.WordNetLemmatizer().lemmatize(stem, 'v')\n",
+    "                #print(word+\" | \"+stem+\" | \"+lemma+\" | \"+lemmaPOS)\n",
+    "                oFile.write(lemmaPOS+\"\\n\")\n",
+    "            \n",
+    "            oFile.close()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
-   "metadata": {},
+   "execution_count": 84,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[Lemmatizing: ] /media/sf_Shared_Folder/TEST/one file/01_what-is-the-definition-of-derivative.en_stemmedbyPOS.txt\n",
+      "[Lemmatizing: ] /media/sf_Shared_Folder/TEST/one file/04_how-does-wiggling-x-affect-f-x.en_stemmedbyPOS.txt\n",
+      "[Lemmatizing: ] /media/sf_Shared_Folder/TEST/one file/NounVerbAdjectiveAdverb.en_stemmedbyPOS.txt\n",
       "\n",
-      "Total number of 451 TXT files found.\n"
+      "Total number of 21 TXT files found.\n"
      ]
     }
    ],
    "source": [
     "# ----------------------------------------------- PROGRAM  -------------------------------------------------------\n",
     "\n",
-    "path = \"/media/sf_Shared_Folder/TEST/RAW\"   # TEST DATA PATH\n",
+    "path = \"/media/sf_Shared_Folder/TEST/one file\"   # TEST DATA PATH\n",
     "#path = \"/media/sf_Shared_Folder/Coursera Downloads PreProcessed\"   # REAL DATA PATH\n",
     "\n",
     "counter = 0\n",
@@ -354,13 +398,22 @@
     "                    Second argument: path without extension of the current file\n",
     "                    the path will be used to save the output file with the same name and same location\n",
     "                    but with different file ending based on what the fuunction did\n",
+    "                    \n",
+    "                    Functions take input files ending on:\n",
+    "                    splitSentences()\t>>\t_Raw.txt\n",
+    "                    sentTokenize()\t\t>>\t_sent.txt\n",
+    "                    POStag()\t\t\t>>\t_noStopWordsALL.txt\n",
+    "                    rmStopWords()\t\t>>\t_tokens.txt\n",
+    "                    stem()\t\t\t\t>>\t_tokPOStag.txt\n",
+    "                    lemmatize()\t\t\t>>\t_stemmed.txt\n",
     "                    \"\"\"  \n",
     "                    #removePunctuation(curFile, fileExtRemoved)\n",
     "                    #splitSentences(curFile, fileExtRemoved)\n",
     "                    #sentTokenize(curFile, fileExtRemoved)\n",
-    "                    #POStag(curFile, fileExtRemoved)\n",
     "                    #rmStopWords(curFile, fileExtRemoved)\n",
+    "                    #POStag(curFile, fileExtRemoved)\n",
     "                    #stem(curFile, fileExtRemoved)\n",
+    "                    lemmatize(curFile, fileExtRemoved)\n",
     "                    \n",
     "                    if curFile.name.endswith(\"_Raw.txt\"):\n",
     "                        counter += 1\n",
