fix tf-idf output dummy data

--- a/Python Scripts/Data Analysis.ipynb
+++ b/Python Scripts/Data Analysis.ipynb
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,6 +67,8 @@
     "import string\n",
     "import time\n",
     "from unidecode import unidecode\n",
+    "import pprint\n",
+    "from tabulate import tabulate\n",
     "\n",
     "import math\n",
     "from textblob import TextBlob as tb\n",
@@ -100,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -208,79 +210,25 @@
      "text": [
       "\n",
       "Top 5 terms in document 1 | <_io.TextIOWrapper name='/media/sf_Shared_Folder/TEST/one file/01_what-is-the-definition-of-derivative.en_lemmatized.txt' mode='r' encoding='ISO-8859-1'>\n",
-      "+------------+--------+\n",
-      "|    TERM    | TF-IDF |\n",
-      "+------------+--------+\n",
-      "|     'm     |  0.01  |\n",
-      "+------------+--------+\n",
-      "|   interv   | 0.009  |\n",
-      "+------------+--------+\n",
-      "| differenty | 0.009  |\n",
-      "+------------+--------+\n",
-      "|  definit   | 0.009  |\n",
-      "+------------+--------+\n",
-      "|    not     | 0.007  |\n",
-      "+------------+--------+\n",
+      "\tTERM: 'm \t|\t TF-IDF: 0.0102\n",
+      "\tTERM: interv \t|\t TF-IDF: 0.00935\n",
+      "\tTERM: definit \t|\t TF-IDF: 0.0085\n",
+      "\tTERM: differenty \t|\t TF-IDF: 0.0085\n",
+      "\tTERM: limit \t|\t TF-IDF: 0.0068\n",
       "\n",
       "Top 5 terms in document 2 | <_io.TextIOWrapper name='/media/sf_Shared_Folder/TEST/one file/04_how-does-wiggling-x-affect-f-x.en_lemmatized.txt' mode='r' encoding='ISO-8859-1'>\n",
-      "+------------+--------+\n",
-      "|    TERM    | TF-IDF |\n",
-      "+------------+--------+\n",
-      "|     'm     |  0.01  |\n",
-      "+------------+--------+\n",
-      "|   interv   | 0.009  |\n",
-      "+------------+--------+\n",
-      "| differenty | 0.009  |\n",
-      "+------------+--------+\n",
-      "|  definit   | 0.009  |\n",
-      "+------------+--------+\n",
-      "|    not     | 0.007  |\n",
-      "+------------+--------+\n",
-      "|    tang    | 0.012  |\n",
-      "+------------+--------+\n",
-      "|    know    | 0.012  |\n",
-      "+------------+--------+\n",
-      "|    lin     | 0.012  |\n",
-      "+------------+--------+\n",
-      "|    mov     | 0.008  |\n",
-      "+------------+--------+\n",
-      "|    slop    | 0.008  |\n",
-      "+------------+--------+\n",
+      "\tTERM: tang \t|\t TF-IDF: 0.01193\n",
+      "\tTERM: lin \t|\t TF-IDF: 0.01193\n",
+      "\tTERM: know \t|\t TF-IDF: 0.01193\n",
+      "\tTERM: mov \t|\t TF-IDF: 0.00795\n",
+      "\tTERM: slop \t|\t TF-IDF: 0.00795\n",
       "\n",
       "Top 5 terms in document 3 | <_io.TextIOWrapper name='/media/sf_Shared_Folder/TEST/one file/NounVerbAdjectiveAdverb.en_lemmatized.txt' mode='r' encoding='ISO-8859-1'>\n",
-      "+------------+--------+\n",
-      "|    TERM    | TF-IDF |\n",
-      "+------------+--------+\n",
-      "|     'm     |  0.01  |\n",
-      "+------------+--------+\n",
-      "|   interv   | 0.009  |\n",
-      "+------------+--------+\n",
-      "| differenty | 0.009  |\n",
-      "+------------+--------+\n",
-      "|  definit   | 0.009  |\n",
-      "+------------+--------+\n",
-      "|    not     | 0.007  |\n",
-      "+------------+--------+\n",
-      "|    tang    | 0.012  |\n",
-      "+------------+--------+\n",
-      "|    know    | 0.012  |\n",
-      "+------------+--------+\n",
-      "|    lin     | 0.012  |\n",
-      "+------------+--------+\n",
-      "|    mov     | 0.008  |\n",
-      "+------------+--------+\n",
-      "|    slop    | 0.008  |\n",
-      "+------------+--------+\n",
-      "|   effect   |   0    |\n",
-      "+------------+--------+\n",
-      "|   allow    |   0    |\n",
-      "+------------+--------+\n",
-      "|  difinit   |   0    |\n",
-      "+------------+--------+\n",
-      "|   exact    |   0    |\n",
-      "+------------+--------+\n",
-      "|   wiggl    | -0.016 |\n",
-      "+------------+--------+\n"
+      "\tTERM: allow \t|\t TF-IDF: 0.0\n",
+      "\tTERM: difinit \t|\t TF-IDF: 0.0\n",
+      "\tTERM: effect \t|\t TF-IDF: 0.0\n",
+      "\tTERM: exact \t|\t TF-IDF: 0.0\n",
+      "\tTERM: littl \t|\t TF-IDF: -0.01598\n"
      ]
     }
    ],
@@ -303,16 +251,15 @@
     "    sortedTerms = sorted(scores.items(),key=lambda x: x[1], reverse=True)\n",
     "    \n",
     "    for term, score in sortedTerms[:topNwords]:\n",
-    "         table.append_row([term, round(score, 5)]) \n",
-    "         exportedList.append(term)\n",
-    "    \n",
-    "    print(table)\n",
-    "#    print(exportedWords, \"\\n\")"
+    "        #print(table.append_row([term, round(score, 5)]))\n",
+    "        print(\"\\tTERM: {} \\t|\\t TF-IDF: {}\".format(term, round(score, 5)))\n",
+    "        #print tabulate([term, round(score, 5)], headers=['tTERM', 'TF-IDF'])\n",
+    "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -330,21 +277,21 @@
      "text": [
       "/usr/local/lib/python3.5/dist-packages/nltk/corpus/reader/wordnet.py:1107: ResourceWarning: unclosed file <_io.BufferedReader name='/home/ani/nltk_data/corpora/wordnet/lexnames'>\n",
       "  for i, line in enumerate(self.open('lexnames')):\n",
+      "/usr/local/lib/python3.5/dist-packages/nltk/corpus/reader/wordnet.py:1159: ResourceWarning: unclosed file <_io.BufferedReader name='/home/ani/nltk_data/corpora/wordnet/index.adv'>\n",
+      "  for i, line in enumerate(self.open('index.%s' % suffix)):\n",
+      "/usr/local/lib/python3.5/dist-packages/nltk/corpus/reader/wordnet.py:1159: ResourceWarning: unclosed file <_io.BufferedReader name='/home/ani/nltk_data/corpora/wordnet/index.adj'>\n",
+      "  for i, line in enumerate(self.open('index.%s' % suffix)):\n",
       "/usr/local/lib/python3.5/dist-packages/nltk/corpus/reader/wordnet.py:1159: ResourceWarning: unclosed file <_io.BufferedReader name='/home/ani/nltk_data/corpora/wordnet/index.verb'>\n",
       "  for i, line in enumerate(self.open('index.%s' % suffix)):\n",
       "/usr/local/lib/python3.5/dist-packages/nltk/corpus/reader/wordnet.py:1159: ResourceWarning: unclosed file <_io.BufferedReader name='/home/ani/nltk_data/corpora/wordnet/index.noun'>\n",
       "  for i, line in enumerate(self.open('index.%s' % suffix)):\n",
-      "/usr/local/lib/python3.5/dist-packages/nltk/corpus/reader/wordnet.py:1159: ResourceWarning: unclosed file <_io.BufferedReader name='/home/ani/nltk_data/corpora/wordnet/index.adj'>\n",
-      "  for i, line in enumerate(self.open('index.%s' % suffix)):\n",
-      "/usr/local/lib/python3.5/dist-packages/nltk/corpus/reader/wordnet.py:1159: ResourceWarning: unclosed file <_io.BufferedReader name='/home/ani/nltk_data/corpora/wordnet/index.adv'>\n",
-      "  for i, line in enumerate(self.open('index.%s' % suffix)):\n",
-      "/usr/local/lib/python3.5/dist-packages/nltk/corpus/reader/wordnet.py:1209: ResourceWarning: unclosed file <_io.BufferedReader name='/home/ani/nltk_data/corpora/wordnet/verb.exc'>\n",
-      "  for line in self.open('%s.exc' % suffix):\n",
-      "/usr/local/lib/python3.5/dist-packages/nltk/corpus/reader/wordnet.py:1209: ResourceWarning: unclosed file <_io.BufferedReader name='/home/ani/nltk_data/corpora/wordnet/noun.exc'>\n",
+      "/usr/local/lib/python3.5/dist-packages/nltk/corpus/reader/wordnet.py:1209: ResourceWarning: unclosed file <_io.BufferedReader name='/home/ani/nltk_data/corpora/wordnet/adv.exc'>\n",
       "  for line in self.open('%s.exc' % suffix):\n",
       "/usr/local/lib/python3.5/dist-packages/nltk/corpus/reader/wordnet.py:1209: ResourceWarning: unclosed file <_io.BufferedReader name='/home/ani/nltk_data/corpora/wordnet/adj.exc'>\n",
       "  for line in self.open('%s.exc' % suffix):\n",
-      "/usr/local/lib/python3.5/dist-packages/nltk/corpus/reader/wordnet.py:1209: ResourceWarning: unclosed file <_io.BufferedReader name='/home/ani/nltk_data/corpora/wordnet/adv.exc'>\n",
+      "/usr/local/lib/python3.5/dist-packages/nltk/corpus/reader/wordnet.py:1209: ResourceWarning: unclosed file <_io.BufferedReader name='/home/ani/nltk_data/corpora/wordnet/verb.exc'>\n",
+      "  for line in self.open('%s.exc' % suffix):\n",
+      "/usr/local/lib/python3.5/dist-packages/nltk/corpus/reader/wordnet.py:1209: ResourceWarning: unclosed file <_io.BufferedReader name='/home/ani/nltk_data/corpora/wordnet/noun.exc'>\n",
       "  for line in self.open('%s.exc' % suffix):\n"
      ]
     },
@@ -359,14 +306,22 @@
       " interv : NO SYNSETS\n",
       "\n",
       "\n",
-      " differenty : NO SYNSETS\n",
-      "\n",
-      "\n",
       " definit : NO SYNSETS\n",
       "\n",
       "\n",
-      " not\n",
-      "-  not.r.01  |  negation of a word or group of words\n",
+      " differenty : NO SYNSETS\n",
+      "\n",
+      "\n",
+      " limit\n",
+      "-  limit.n.01  |  the greatest possible degree of something\n",
+      "-  terminus_ad_quem.n.01  |  final or latest limiting point\n",
+      "-  limit.n.03  |  as far as something can go\n",
+      "-  limit.n.04  |  the boundary of a specific area\n",
+      "-  limit.n.05  |  the mathematical value toward which a function goes as the independent variable approaches infinity\n",
+      "-  limit.n.06  |  the greatest amount of something that is possible or allowed\n",
+      "-  restrict.v.03  |  place limits on (extent or access)\n",
+      "-  limit.v.02  |  restrict or confine, \"I limit you to two visits to the pub a day\"\n",
+      "-  specify.v.02  |  decide upon or fix definitely\n",
       "\n",
       " tang\n",
       "-  nip.n.05  |  a tart spicy quality\n",
@@ -376,6 +331,9 @@
       "-  serrated_wrack.n.01  |  brown algae seaweed with serrated edges\n",
       "-  tang.n.06  |  any of various coarse seaweeds\n",
       "-  sea_tangle.n.01  |  any of various kelps especially of the genus Laminaria\n",
+      "\n",
+      " lin\n",
+      "-  lin.n.01  |  United States sculptor and architect whose public works include the memorial to veterans of the Vietnam War in Washington (born in 1959)\n",
       "\n",
       " know\n",
       "-  know.n.01  |  the fact of being aware of information that is known to few people\n",
@@ -391,9 +349,6 @@
       "-  know.v.10  |  be able to distinguish, recognize as being different\n",
       "-  know.v.11  |  perceive as familiar\n",
       "\n",
-      " lin\n",
-      "-  lin.n.01  |  United States sculptor and architect whose public works include the memorial to veterans of the Vietnam War in Washington (born in 1959)\n",
-      "\n",
       " mov : NO SYNSETS\n",
       "\n",
       "\n",
@@ -407,16 +362,6 @@
       "-  squelch.v.03  |  walk through mud or mire\n",
       "-  slop.v.03  |  ladle clumsily\n",
       "-  slop.v.04  |  feed pigs\n",
-      "\n",
-      " effect\n",
-      "-  consequence.n.01  |  a phenomenon that follows and is caused by some previous phenomenon\n",
-      "-  impression.n.02  |  an outward appearance\n",
-      "-  effect.n.03  |  an impression (especially one that is artificial or contrived)\n",
-      "-  effect.n.04  |  the central meaning or theme of a speech or literary work\n",
-      "-  effect.n.05  |  (of a law) having legal validity\n",
-      "-  effect.n.06  |  a symptom caused by an illness or a drug\n",
-      "-  effect.v.01  |  produce\n",
-      "-  effect.v.02  |  act so as to bring into existence\n",
       "\n",
       " allow\n",
       "-  let.v.01  |  make it possible through a specific action or lack of action for something to happen\n",
@@ -433,13 +378,23 @@
       " difinit : NO SYNSETS\n",
       "\n",
       "\n",
+      " effect\n",
+      "-  consequence.n.01  |  a phenomenon that follows and is caused by some previous phenomenon\n",
+      "-  impression.n.02  |  an outward appearance\n",
+      "-  effect.n.03  |  an impression (especially one that is artificial or contrived)\n",
+      "-  effect.n.04  |  the central meaning or theme of a speech or literary work\n",
+      "-  effect.n.05  |  (of a law) having legal validity\n",
+      "-  effect.n.06  |  a symptom caused by an illness or a drug\n",
+      "-  effect.v.01  |  produce\n",
+      "-  effect.v.02  |  act so as to bring into existence\n",
+      "\n",
       " exact\n",
       "-  demand.v.03  |  claim as due or just\n",
       "-  claim.v.05  |  take as an undesirable consequence of some event or state of affairs\n",
       "-  exact.a.01  |  marked by strict and particular and complete accordance with fact\n",
       "-  accurate.s.02  |  (of ideas, images, representations, expressions) characterized by perfect conformity to fact or truth; strictly correct\n",
       "\n",
-      " wiggl : NO SYNSETS\n",
+      " littl : NO SYNSETS\n",
       "\n",
       "\n",
       "\n",
@@ -454,6 +409,35 @@
       "-  efflorescence.n.04  |  a powdery deposit on a surface\n",
       "-  bloom.v.01  |  produce or yield flowers\n",
       "\n",
+      " iot : NO SYNSETS\n",
+      "\n",
+      "\n",
+      " lifecycle : NO SYNSETS\n",
+      "\n",
+      "\n",
+      " data management : NO SYNSETS\n",
+      "\n",
+      "\n",
+      " Support vector machine : NO SYNSETS\n",
+      "\n",
+      "\n",
+      " database\n",
+      "-  database.n.01  |  an organized body of related information\n",
+      "\n",
+      " integrity\n",
+      "-  integrity.n.01  |  an undivided or unbroken completeness or totality with nothing wanting\n",
+      "-  integrity.n.02  |  moral soundness\n",
+      "\n",
+      " design pattern : NO SYNSETS\n",
+      "\n",
+      "\n",
+      " filter\n",
+      "-  filter.n.01  |  device that removes something from whatever passes through it\n",
+      "-  filter.n.02  |  an electrical device that alters the frequency spectrum of signals passing through it\n",
+      "-  filter.v.01  |  remove by passing through a filter\n",
+      "-  percolate.v.05  |  pass through\n",
+      "-  trickle.v.01  |  run or flow slowly, as in drops or in an unsteady stream\n",
+      "\n",
       " example\n",
       "-  example.n.01  |  an item of information that is typical of a class or group\n",
       "-  model.n.07  |  a representative form or pattern\n",
@@ -461,12 +445,6 @@
       "-  example.n.04  |  punishment intended as a warning to others\n",
       "-  case.n.01  |  an occurrence of something\n",
       "-  exercise.n.04  |  a task performed or problem solved in order to develop skill or understanding\n",
-      "\n",
-      " knn : NO SYNSETS\n",
-      "\n",
-      "\n",
-      " svm : NO SYNSETS\n",
-      "\n",
       "\n",
       " java\n",
       "-  java.n.01  |  an island in Indonesia to the south of Borneo; one of the world's most densely populated regions\n",
@@ -488,36 +466,13 @@
       "-  model.v.01  |  plan or create according to a model or models\n",
       "-  pattern.v.02  |  form a pattern\n",
       "\n",
-      " database\n",
-      "-  database.n.01  |  an organized body of related information\n",
-      "\n",
       " machine learning : NO SYNSETS\n",
       "\n",
       "\n",
-      " iot : NO SYNSETS\n",
+      " knn : NO SYNSETS\n",
       "\n",
       "\n",
-      " filter\n",
-      "-  filter.n.01  |  device that removes something from whatever passes through it\n",
-      "-  filter.n.02  |  an electrical device that alters the frequency spectrum of signals passing through it\n",
-      "-  filter.v.01  |  remove by passing through a filter\n",
-      "-  percolate.v.05  |  pass through\n",
-      "-  trickle.v.01  |  run or flow slowly, as in drops or in an unsteady stream\n",
-      "\n",
-      " Support vector machine : NO SYNSETS\n",
-      "\n",
-      "\n",
-      " integrity\n",
-      "-  integrity.n.01  |  an undivided or unbroken completeness or totality with nothing wanting\n",
-      "-  integrity.n.02  |  moral soundness\n",
-      "\n",
-      " design pattern : NO SYNSETS\n",
-      "\n",
-      "\n",
-      " data management : NO SYNSETS\n",
-      "\n",
-      "\n",
-      " lifecycle : NO SYNSETS\n",
+      " svm : NO SYNSETS\n",
       "\n"
      ]
     }
