towards full term lemma conversion

--- a/Python Scripts/playground.ipynb
+++ b/Python Scripts/playground.ipynb
@@ -100,116 +100,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "('music', 'NN')\n",
-      "('hello', 'NN')\n",
-      "('i', 'JJ')\n",
-      "(\"'m\", 'VBP')\n",
-      "('good', 'JJ')\n",
-      "('to', 'TO')\n",
-      "('see', 'VB')\n",
-      "('you', 'PRP')\n",
-      "('back', 'RB')\n",
-      "('in', 'IN')\n",
-      "('our', 'PRP$')\n",
-      "('course', 'NN')\n",
-      "('before', 'IN')\n",
-      "('we', 'PRP')\n",
-      "('start', 'VBP')\n",
-      "('with', 'IN')\n",
-      "('this', 'DT')\n",
-      "('video', 'NN')\n",
-      "('let', 'VB')\n",
-      "('me', 'PRP')\n",
-      "('remind', 'VB')\n",
-      "('you', 'PRP')\n",
-      "('what', 'WDT')\n",
-      "('has', 'VBZ')\n",
-      "('been', 'VBN')\n",
-      "('covered', 'VBN')\n",
-      "('in', 'IN')\n",
-      "('earlier', 'JJR')\n",
-      "('videos', 'NN')\n",
-      "('by', 'IN')\n",
-      "('now', 'RB')\n",
-      "('you', 'PRP')\n",
-      "('should', 'MD')\n",
-      "('have', 'VB')\n",
-      "('an', 'DT')\n",
-      "('idea', 'NN')\n",
-      "('of', 'IN')\n",
-      "('what', 'WP')\n",
-      "('an', 'DT')\n",
-      "('embedded', 'JJ')\n",
-      "('processor', 'NN')\n",
-      "('is', 'VBZ')\n",
-      "('and', 'CC')\n",
-      "('how', 'WRB')\n",
-      "('it', 'PRP')\n",
-      "('works', 'VBZ')\n",
-      "('you', 'PRP')\n",
-      "('should', 'MD')\n",
-      "('also', 'RB')\n",
-      "('be', 'VB')\n",
-      "('familiar', 'JJ')\n",
-      "('with', 'IN')\n",
-      "('the', 'DT')\n",
-      "('features', 'NNS')\n",
-      "('of', 'IN')\n",
-      "('an', 'DT')\n",
-      "('embedded', 'JJ')\n",
-      "('processor', 'NN')\n",
-      "('i', 'NN')\n",
-      "('must', 'MD')\n",
-      "('remind', 'VB')\n",
-      "('you', 'PRP')\n",
-      "('again', 'RB')\n",
-      "('that', 'IN')\n",
-      "('in', 'IN')\n",
-      "('this', 'DT')\n",
-      "('course', 'NN')\n",
-      "('we', 'PRP')\n",
-      "('make', 'VBP')\n",
-      "('emphasis', 'NN')\n",
-      "('on', 'IN')\n",
-      "('microcontrollers', 'NNS')\n",
-      "('therefore', 'RB')\n",
-      "('the', 'DT')\n",
-      "('large', 'JJ')\n",
-      "('field', 'NN')\n",
-      "('of', 'IN')\n",
-      "('embedded', 'JJ')\n",
-      "('processors', 'NNS')\n",
-      "('is', 'VBZ')\n",
-      "('now', 'RB')\n",
-      "('reduced', 'VBN')\n",
-      "('to', 'TO')\n",
-      "('only', 'RB')\n",
-      "('microcontrollers', 'NNS')\n",
-      "('after', 'IN')\n",
-      "('you', 'PRP')\n",
-      "('learn', 'VBP')\n",
-      "('about', 'IN')\n",
-      "('microcontrollers', 'NNS')\n",
-      "('the', 'DT')\n",
-      "('next', 'JJ')\n",
-      "('step', 'NN')\n",
-      "('would', 'MD')\n",
-      "('be', 'VB')\n",
-      "('to', 'TO')\n",
-      "('somehow', 'VB')\n",
-      "('put', 'VB')\n",
-      "('your', 'PRP$')\n",
-      "('hands', 'NNS')\n",
-      "('on', 'IN')\n",
-      "('them', 'PRP')\n",
-      "('and', 'CC')\n"
+     "ename": "NameError",
+     "evalue": "name 'text' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-3-b63ae506b9e7>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;31m# initial text is full of new lines, so we have to remove them first.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0mtext\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtext\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreplace\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"\\n\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\" \"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0msentencesInit\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msent_tokenize\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtext\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'text' is not defined"
      ]
     }
    ],
@@ -242,6 +146,157 @@
     "    else:\n",
     "        tokens.append(tok)\n",
     "        print(tok)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cat\n",
+      "cactus\n",
+      "music\n",
+      "musician\n",
+      "musical\n",
+      "goose\n",
+      "rock\n",
+      "python\n",
+      "good\n",
+      "best\n",
+      "run\n",
+      "run\n"
+     ]
+    }
+   ],
+   "source": [
+    "from nltk.stem import WordNetLemmatizer\n",
+    "\n",
+    "lemmatizer = WordNetLemmatizer()\n",
+    "\n",
+    "print(lemmatizer.lemmatize(\"cats\"))\n",
+    "print(lemmatizer.lemmatize(\"cacti\"))\n",
+    "print(lemmatizer.lemmatize(\"music\", pos=\"a\"))\n",
+    "print(lemmatizer.lemmatize(\"musician\", pos=\"a\"))\n",
+    "print(lemmatizer.lemmatize(\"musical\", pos=\"a\"))\n",
+    "print(lemmatizer.lemmatize(\"geese\"))\n",
+    "print(lemmatizer.lemmatize(\"rocks\"))\n",
+    "print(lemmatizer.lemmatize(\"python\"))\n",
+    "print(lemmatizer.lemmatize(\"better\", pos=\"a\"))\n",
+    "print(lemmatizer.lemmatize(\"best\", pos=\"a\"))\n",
+    "print(lemmatizer.lemmatize(\"run\"))\n",
+    "print(lemmatizer.lemmatize(\"run\",'v'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path = \"/media/sf_Shared_Folder/TEST/one file\"\n",
+    "\n",
+    "from sklearn.datasets import fetch_20newsgroups\n",
+    "from sklearn.feature_extraction.text import CountVectorizer\n",
+    "\n",
+    "dataSetTrain = fetch_20newsgroups(subset='train', shuffle=True)\n",
+    "dataSetTest = fetch_20newsgroups(subset='test', shuffle=True)\n",
+    "\n",
+    "#print(dataSetTrain.target_names) #prints all the categories\n",
+    "#print(\"\\n\".join(dataSetTrain.data[0].split(\"\\n\")[:3])) #prints first line of the first data file\n",
+    "#print(\"\\n\".join(dataSetTrain.data[1].split(\"\\n\")[:4])) #prints first line of the first data file\n",
+    "#print(\"\\n\")\n",
+    "#print(\"\\n\".join(dataSetTest.data[1].split(\"\\n\")[:4])) #prints first line of the first data file\n",
+    "#print(len(dataSetTrain))\n",
+    "\n",
+    "count_vect = CountVectorizer()\n",
+    "counts = X_train_counts = count_vect.fit_transform(dataSetTrain.data)\n",
+    "shaped = X_train_counts.shape\n",
+    "\n",
+    "#print(shaped)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'str'>\n",
+      "<class 'str'>\n",
+      "<class 'str'>\n",
+      "<class 'str'>\n",
+      "<class 'str'>\n",
+      "<class 'str'>\n",
+      "<class 'str'>\n",
+      "<class 'str'>\n",
+      "<class 'str'>\n",
+      "<class 'str'>\n",
+      "<class 'str'>\n",
+      "<class 'str'>\n",
+      "<class 'str'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "\n",
+    "def findRealTerm(iFile, lemmaIn, POSfile):   \n",
+    "    # take the path of the input file and look for the file ending on \"_stemmedbyPOS.txt\"\n",
+    "    # split each line into 3, look in line[3] for the first match of the current lemma\n",
+    "    # when found, take line[0] which is the full word and return that word\n",
+    "    # exit the function\n",
+    "    #print(\"Looking for term for lemma: \" + lemmaIn)\n",
+    "    \n",
+    "    baseName = iFile.name.split(\".en\", 1)[0]\n",
+    "    \n",
+    "    targetfname = baseName+\".en_stemmedbyPOS.txt\"\n",
+    "    \n",
+    "    #if os.path.basename(targetfname) in POSfileList:\n",
+    "        #print(\"File found: \", targetfname)\n",
+    "     #   try:\n",
+    "            #targetf = open(targetfname, 'r', encoding = \"ISO-8859-1\") #IMPORTANT ENCODING! UTF8 DOESN'T WORK\n",
+    "            #print(targetf)\n",
+    "            \n",
+    "    # !\n",
+    "    res = \"\"\n",
+    "    posfileCont = POSfile.read().split()\n",
+    "\n",
+    "    for line in posfileCont:\n",
+    "        line = line.split(\",\")\n",
+    "\n",
+    "        word = line[0]\n",
+    "        lemma = line[2]\n",
+    "\n",
+    "        if lemma == lemmaIn:\n",
+    "            res = word\n",
+    "            # print(type(word),word)\n",
+    "            # TODO - return the right output\n",
+    "    \n",
+    "    return res\n",
+    "      #  finally:\n",
+    "       #     targetf.close()\n",
+    "\n",
+    "\n",
+    "\n",
+    "root = \"/media/sf_Shared_Folder/TEST/one file\"\n",
+    "lookupFile = \"test_stemmedbyPOS.txt\"\n",
+    "lemmasFile = \"test_lemmatized.txt\"\n",
+    "\n",
+    "curFile = open(root+\"/\"+lemmasFile, 'r', encoding = \"ISO-8859-1\") #IMPORTANT ENCODING! UTF8 DOESN'T WORK\n",
+    "lookFile = open(root+\"/\"+lookupFile, 'r', encoding = \"ISO-8859-1\") #IMPORTANT ENCODING! UTF8 DOESN'T WORK\n",
+    "\n",
+    "#findRealTerm(curFile,\"wiggl\",lookFile)\n",
+    "\n",
+    "items = {\"mus\",\"want\",\"capt\",\"prec\",\"inform\",\"wiggl\",\"output\",\"difinit\",\"der\",\"wil\",\"allow\",\"exact\",\"der\",\"defin\"}\n",
+    "for item in items:\n",
+    "    print(type(findRealTerm(curFile,item,lookFile)))"
    ]
   }
  ],
