--- a/Python Scripts/FullPreprocessing.ipynb
+++ b/Python Scripts/FullPreprocessing.ipynb
@@ -43,28 +43,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[nltk_data] Downloading package stopwords to\n",
-      "[nltk_data]     C:\\Users\\a.dimitrova\\AppData\\Roaming\\nltk_data...\n",
-      "[nltk_data]   Unzipping corpora\\stopwords.zip.\n",
-      "[nltk_data] Downloading package punkt to\n",
-      "[nltk_data]     C:\\Users\\a.dimitrova\\AppData\\Roaming\\nltk_data...\n",
-      "[nltk_data]   Package punkt is already up-to-date!\n",
-      "[nltk_data] Downloading package wordnet to\n",
-      "[nltk_data]     C:\\Users\\a.dimitrova\\AppData\\Roaming\\nltk_data...\n",
-      "[nltk_data]   Package wordnet is already up-to-date!\n",
-      "[nltk_data] Downloading package averaged_perceptron_tagger to\n",
-      "[nltk_data]     C:\\Users\\a.dimitrova\\AppData\\Roaming\\nltk_data...\n",
-      "[nltk_data]   Unzipping taggers\\averaged_perceptron_tagger.zip.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Import all necessary modules for EVERYTHING here\n",
     "import os\n",
@@ -99,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,9 +133,13 @@
     "path_swAni_full = \"/media/sf_Shared_Folder/stopwordsALL.txt\"\n",
     "path_swAni_part = \"/media/sf_Shared_Folder/stopwords.txt\"\n",
     "\n",
-    "# WINDOWS path (r = raw)\n",
+    "# WINDOWS path Toshiba (r = raw)\n",
     "path_swAni_full_W = r\"C:\\Users\\a.dimitrova\\Desktop\\TEST data\\stopwordsALL.txt\"\n",
     "path_swAni_part_W = r\"C:\\Users\\a.dimitrova\\Desktop\\TEST data\\stopwords.txt\"\n",
+    "\n",
+    "# WINDOWS path HP hope laptop (r = raw)\n",
+    "path_swAni_full_W = r\"C:\\Users\\ani\\Desktop\\Course data Thesis\\stopwordsALL.txt\"\n",
+    "path_swAni_part_W = r\"C:\\Users\\ani\\Desktop\\Course data Thesis\\stopwords.txt\"\n",
     "\n",
     "swFile = open(path_swAni_full_W, 'r', encoding = \"ISO-8859-1\")\n",
     "stopWords = swFile.read().split()\n",
@@ -253,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -368,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 21,
    "metadata": {
     "scrolled": false
    },
@@ -378,7 +363,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Total number of 5019 TXT files found.\n"
+      "Total number of 27 TXT files found.\n"
      ]
     }
    ],
@@ -388,7 +373,8 @@
     "#path = \"/media/sf_Shared_Folder/TEST/one file\"   # TEST DATA PATH LINUX\n",
     "#path = r\"C:\\Users\\a.dimitrova\\Desktop\\TEST data\\one file\"  # TEST DATA PATH LINUX\n",
     "#path = \"/media/sf_Shared_Folder/Coursera Downloads PreProcessed\"   # REAL DATA PATH LINUX\n",
-    "path = r\"C:\\Users\\a.dimitrova\\Desktop\\TEST data\\PROCESSED\\Course-data\"  # REAL DATA ON WINDOWS\n",
+    "#path = r\"C:\\Users\\a.dimitrova\\Desktop\\TEST data\\PROCESSED\\Course-data\"  # REAL DATA ON WINDOWS\n",
+    "path = r\"C:\\Users\\ani\\Desktop\\Course data Thesis\\Course test files\"    # Course test data - only 3 files\n",
     "\n",
     "counter = 0\n",
     "\n",
@@ -499,6 +485,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
