--- a/Python Scripts/Data Analysis.ipynb
+++ b/Python Scripts/Data Analysis.ipynb
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,8 @@
     "#nltk.download('wordnet')\n",
     "\n",
     "from sklearn.feature_extraction.text import CountVectorizer\n",
-    "from sklearn.metrics.pairwise import euclidean_distances"
+    "from sklearn.metrics.pairwise import euclidean_distances\n",
+    "import operator"
    ]
   },
   {
@@ -273,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -321,14 +322,15 @@
     "            #array = vector.toarray()\n",
     "            #featureNames = vectorizer.get_feature_names()\n",
     "            \n",
-    "            print(vectorizer.vocabulary_)\n",
-    "            \n",
-    "            #features = vectorizer.fit_transform(data_corpus)\n",
-    "            #print(vectorizer.vocabulary_)\n",
+    "            vocDictionary = vectorizer.vocabulary_\n",
+    "            sorted_vocDictionary = sorted(vocDictionary.items(), key=operator.itemgetter(1), reverse=True)\n",
+    "            print(sorted_vocDictionary)\n",
     "\n",
+    "            \"\"\"\n",
     "            for f in vector:\n",
     "                print(\"Euclidean distances: \\n\")\n",
     "                print(euclidean_distances(vector[0], f))\n",
+    "            \"\"\"\n",
     "            \n",
     "        finally:\n",
     "            iLemmaFile.close()              \n",
@@ -394,9 +396,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "processing.. C:\\Users\\ani\\Desktop\\Course data Thesis\\Course test files\\01_driving-robots-around.en_stemmedbyPOS.txt\n",
+      "[Bag of words: ]\tC:\\Users\\ani\\Desktop\\Course data Thesis\\Course test files\\01_driving-robots-around.en_lemmatized.txt\n",
+      "\n"
+     ]
+    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -411,36 +424,15 @@
      ]
     },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "\n",
-      "processing.. C:\\Users\\ani\\Desktop\\Course data Thesis\\Course test files\\01_driving-robots-around.en_stemmedbyPOS.txt\n",
-      "[Bag of words: ]\tC:\\Users\\ani\\Desktop\\Course data Thesis\\Course test files\\01_driving-robots-around.en_lemmatized.txt\n",
-      "\n",
-      "{'welcome': 187, 'module': 105, 'course': 35, 'control': 34, 'mobile': 103, 'robots': 135, 'introduced': 81, 'theory': 163, 'way': 185, 'dealing': 37, 'systems': 159, 'general': 63, 'not': 111, 'found': 60, 'go': 66, 'key': 82, 'target': 161, 'application': 10, 'start': 152, 'simple': 144, 'question': 129, 'drive': 43, 'point': 123, 'case': 26, 'ball': 15, 'yellow': 195, 'sun': 156, 'first': 55, 'need': 108, 'understand': 174, 'even': 48, 'answer': 9, 'well': 188, 'obviously': 114, 'measure': 100, 'goal': 67, 'somehow': 148, 'turn': 172, 'actions': 3, 've': 178, 'taken': 160, 'information': 77, 'feeding': 53, 'things': 164, 'design': 38, 'kind': 83, 'know': 84, 'little': 89, 'bite': 20, 'already': 6, 'also': 7, 'discuss': 41, 'gain': 62, 'world': 193, 'sensors': 141, 'models': 104, 'sufficient': 155, 'level': 86, 'abstraction': 2, 'reason': 133, 'rich': 134, 'enough': 46, 'trust': 170, 'based': 16, 'something': 149, 'finally': 54, 'order': 116, 'useful': 176, 'able': 0, 'predict': 125, 'influence': 75, 'particular': 118, 'look': 92, 'differential': 40, 'allow': 5, 'internal': 80, 'state': 153, 'instance': 78, 'will': 190, 'advanced': 4, 'perception': 120, 'give': 65, 'type': 173, 'infor': 76, 'mation': 97, 'want': 184, 'whenever': 189, 'try': 171, 'facts': 52, 'really': 132, 'embrace': 45, 'fundamentally': 61, 'unknown': 175, 'chair': 27, 'building': 23, 'tree': 169, 'forest': 58, 'plan': 122, 'exactly': 50, 'second': 138, 'people': 119, 'move': 107, 'wind': 191, 'makes': 95, 'blow': 22, 'sway': 157, 'changing': 28, 'dynamic': 44, 'bad': 14, 'idea': 72, 'produce': 127, 'complicated': 32, 'monolithic': 106, 'everything': 49, 'instead': 79, 'lot': 93, 'times': 166, 'divide': 42, 'task': 162, 'chunks': 29, 'individual': 74, 'get': 64, 'may': 98, 'shows': 143, 'environment': 47, 'switch': 158, 'avoid': 12, 'primitive': 126, 'blocks': 21, 'view': 180, 'called': 24, 'behaviors': 19, 'concepts': 33, 'quite': 130, 'mention': 101, 'handful': 71, 'standard': 151, 'indeed': 73, 'see': 139, 'to': 167, 'means': 99, 'waypoint': 186, 'location': 90, 'obstacles': 113, 'absolutely': 1, 'crucial': 36, 'slam': 147, 'office': 115, 'straight': 154, 'lines': 88, 'walls': 183, 'follow': 56, 'wall': 182, 'track': 168, 'forth': 59, 'beha': 18, 'viors': 181, 'would': 194, 'like': 87, 'video': 179, 'developing': 39, 'working': 192, 'camera': 25, 'map': 96, 'putting': 128, 'thinking': 165, 'new': 110, 'long': 91, 'saw': 137, 'spending': 150, 'large': 85, 'amount': 8, 're': 131, 'running': 136, 'following': 57, 'pops': 124, 'obstacle': 112, 'sitting': 145, 'clear': 30, 'goes': 68, 'back': 13, 'example': 51, 'segway': 140, 'never': 109, 'mind': 102, 'graphs': 70, 'lower': 94, 'part': 117, 'picture': 121, 'arc': 11, 'various': 177, 'sizes': 146, 'shapes': 142, 'become': 17, 'good': 69, 'combine': 31}\n",
-      "Euclidean distances: \n",
-      "\n",
-      "[[0.]]\n",
-      "\n",
-      "\n",
-      "processing.. C:\\Users\\ani\\Desktop\\Course data Thesis\\Course test files\\02_differential-drive-robots.en_stemmedbyPOS.txt\n",
-      "[Bag of words: ]\tC:\\Users\\ani\\Desktop\\Course data Thesis\\Course test files\\02_differential-drive-robots.en_lemmatized.txt\n",
-      "\n",
-      "{'order': 109, 'design': 36, 'behaviors': 12, 'controllers': 28, 'robots': 131, 'inevitably': 75, 'need': 104, 'models': 101, 'actually': 1, 'behave': 11, 'not': 105, 'found': 63, 'go': 67, 'start': 149, 'common': 26, 'differential': 37, 'drive': 46, 'mobile': 100, 'wheeled': 186, 'turn': 171, 'rates': 126, 'make': 95, 'move': 102, 'reason': 128, 'extremely': 55, 'fact': 56, 'khepera': 82, 'using': 176, 'quiet': 123, 'lot': 93, 'course': 30, 'typically': 172, 'caster': 22, 'back': 9, 'way': 184, 'work': 188, 'right': 130, 'velocity': 179, 'leave': 86, 'ca': 16, 'instance': 78, 'straight': 152, 'ahead': 2, 'slower': 143, 'towards': 165, 'direction': 39, 'able': 0, 'round': 133, 'let': 87, 'kind': 83, 'see': 137, 'look': 92, 'like': 88, 'well': 185, 'cartoon': 20, 'circle': 24, 'black': 15, 'rectangles': 129, 'supposed': 155, 'first': 61, 'thing': 162, 'know': 85, 'dimensions': 38, 've': 178, 'saying': 136, 'good': 68, 'exactly': 53, 'particular': 113, 'parameters': 112, 'dont': 42, 'friction': 64, 'coeficcient': 25, 'case': 21, 'base': 10, 'meaning': 97, 'far': 57, 'away': 8, 'call': 17, 'also': 3, 'radius': 125, 'eaning': 48, 'big': 13, 'capital': 18, 'luckily': 94, 'inherently': 76, 'easy': 49, 'measure': 98, 'take': 158, 'ruler': 134, 'will': 187, 'play': 116, 'little': 91, 'bite': 14, 'role': 132, 'trying': 170, 'want': 183, 'end': 50, 'day': 32, 'signals': 139, 'disposal': 40, 'sub': 154, 'inputs': 77, 'system': 157, 'states': 150, 'draw': 45, 'triangle': 168, 'stress': 153, 'care': 19, 'position': 118, 'heading': 69, 'phi': 115, 'orientation': 110, 'connect': 27, 'somehow': 145, 'transition': 166, 'kinematics': 84, 'instead': 79, 'spending': 148, 'minutes': 99, 'deriving': 34, 'voila': 181, 'tells': 160, 'vr': 182, 'vl': 180, 'translates': 167, 'dot': 44, 'change': 23, 'gives': 66, 'terms': 161, 'mapping': 96, 'problem': 120, 'cumbersome': 31, 'unnatural': 175, 'think': 163, 'various': 177, 'asked': 7, 'get': 65, 'door': 43, 'probably': 119, 'oing': 106, 'fast': 58, 'instructions': 80, 'however': 71, 'implement': 73, 'something': 146, 'unicycle': 173, 'overcomes': 111, 'issue': 81, 'dealing': 33, 'unintuitive': 174, 'sense': 138, 'talk': 159, 'speed': 147, 'quickly': 122, 'angular': 4, 'omega': 108, 'natural': 103, 'feel': 59, 'dynamics': 47, 'follows': 62, 'cosine': 29, 'put': 121, 'equal': 51, 'line': 89, 'similarly': 140, 'sine': 142, 'highly': 70, 'quite': 124, 'deserves': 35, 'patented': 114, 'sweethearts': 156, 'okay': 107, 'together': 164, 'trick': 169, 'find': 60, 'identify': 72, 'divide': 41, 'simply': 141, 'equation': 52, 'real': 127, 'linear': 90, 'solve': 144, 'explicitly': 54, 'point': 117, 'apart': 6, 'indeed': 74, 'running': 135, 'step': 151, 'anything': 5, 'world': 189}\n",
-      "Euclidean distances: \n",
-      "\n",
-      "[[0.]]\n",
-      "\n",
-      "\n",
-      "processing.. C:\\Users\\ani\\Desktop\\Course data Thesis\\Course test files\\03_odometry.en_stemmedbyPOS.txt\n",
-      "[Bag of words: ]\tC:\\Users\\ani\\Desktop\\Course data Thesis\\Course test files\\03_odometry.en_lemmatized.txt\n",
-      "\n",
-      "{'model': 123, 'need': 127, 'way': 224, 'knowing': 101, 'robot': 166, 'state': 191, 'xy': 233, 'fine': 69, 'meaning': 120, 'position': 144, 'heading': 82, 'odometry': 132, 'obtain': 131, 'pose': 143, 'information': 92, 'question': 150, 'actually': 3, 'get': 75, 'well': 225, 'number': 130, 'different': 43, 'end': 56, 'day': 38, 'absolutely': 1, 'sensors': 177, 'possibilities': 145, 'use': 218, 'kind': 100, 'external': 62, 'would': 230, 'measuring': 121, 'something': 187, 'environment': 58, 'instance': 94, 'pretend': 146, 'see': 174, 'landmark': 102, 'let': 107, 'say': 171, 'eiffel': 53, 'tower': 207, 'start': 190, 'moving': 124, 'around': 8, 'keep': 99, 'track': 208, 'able': 0, 'least': 105, 'relative': 161, 'right': 164, 'seem': 175, 'make': 117, 'ultrasound': 215, 'infrared': 93, 'cameras': 16, 'laser': 103, 'scanners': 173, 'tell': 198, 'type': 214, 'course': 36, 'gps': 78, 'internally': 97, 'immediately': 87, 'give': 76, 'things': 200, 'forth': 71, 'however': 85, 'running': 169, 'indoors': 91, 'certainly': 19, 'signals': 181, 'lot': 114, 'times': 203, 'alone': 4, 'enough': 57, 'phi': 139, 'high': 84, 'level': 108, 'fidelity': 66, 'couple': 35, 'sitting': 185, 'helping': 83, 'could': 33, 'compass': 21, 'figure': 67, 'orientation': 136, 'self': 176, 'respecting': 162, 'accelerometers': 2, 'gyroscopes': 80, 'finding': 68, 'far': 65, 've': 219, 'traveled': 209, 'derived': 42, 'degree': 40, 'wheel': 227, 'encoders': 55, 'tick': 202, 'counts': 34, 'many': 118, 'basically': 13, 'revolutions': 163, 'amount': 6, 'like': 109, 'discuss': 46, 'little': 111, 'not': 129, 'found': 72, 'bite': 15, 'reason': 157, 'indeed': 90, 'working': 228, 'referential': 159, 'drive': 51, 'awhile': 12, 'importantly': 88, 'much': 125, 'trusted': 212, 'distance': 47, 'leave': 106, 'following': 70, 'assumption': 9, 'go': 77, 'arc': 7, 'turning': 213, 'constant': 28, 'rate': 153, 'velocity': 220, 'ohm': 133, 'short': 179, 'scales': 172, 'correct': 29, 'unknown': 216, 'case': 17, 'quicker': 151, 'interested': 96, 'center': 18, 'dc': 39, 'luckily': 115, 'simply': 183, 'dl': 48, 'dr': 49, 'particularly': 137, 'picky': 141, 'showing': 180, 'geometry': 74, 'comes': 20, 'instead': 95, 'readily': 155, 'available': 10, 'want': 222, 'look': 113, 'connect': 26, 'mobile': 122, 'fact': 63, 'road': 165, 'interval': 98, 'compute': 24, 'new': 128, 'primes': 148, 'similarly': 182, 'update': 217, 'sine': 184, 'cosine': 31, 'term': 199, 'even': 59, 'quite': 152, 'experiments': 61, 'think': 201, 'order': 135, 'pi': 140, 'total': 205, 'beginning': 14, 'system': 194, 'writing': 231, 'delta': 41, 'take': 196, 'old': 134, 'subtract': 193, 'trick': 210, 'easily': 52, 'either': 54, 'mapping': 119, 'saw': 170, 'previous': 147, 'slide': 186, 'fair': 64, 'major': 116, 'disclaimer': 45, 'must': 126, 'ta': 195, 'daa': 37, 'drift': 50, 'imprecise': 89, 'real': 156, 'source': 188, 'probably': 149, 'trouble': 211, 'video': 221, 'cou': 32, 'rses': 168, 'teach': 197, 'recently': 158, 'competing': 22, 'lines': 110, 'wave': 223, 'points': 142, 'lay': 104, 'pda': 138, 'regulator': 160, 'whack': 226, 'top': 204, 'consequence': 27, 'spinning': 189, 'touching': 206, 'grind': 79, 'completely': 23, 'confused': 25, 'idea': 86, 'world': 229, 'example': 60, 'rather': 154, 'severe': 178, 'wrong': 232, 'direction': 44, 'longer': 112, 'correspond': 30, 'happening': 81, 'always': 5, 'aware': 11, 'full': 73, 'story': 192, 'robust': 167}\n",
-      "Euclidean distances: \n",
-      "\n",
-      "[[0.]]\n"
+     "ename": "AttributeError",
+     "evalue": "'matrix' object has no attribute 'toarray'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-127-820b60eec361>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     58\u001b[0m                         \u001b[1;31m# ---------- bag of words processing: ------------\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     59\u001b[0m                         \u001b[1;31m# last index is whether an output file to be saved or not. 0 - NO, 1 - YES\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 60\u001b[1;33m                         \u001b[0mbagOfWords\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcurFilePath\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mPOSfilePath\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     61\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     62\u001b[0m                 \u001b[1;32mfinally\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-126-c887b305f5b4>\u001b[0m in \u001b[0;36mbagOfWords\u001b[1;34m(iFilePath, iPOSfPath, choice)\u001b[0m\n\u001b[0;32m     37\u001b[0m             \u001b[1;31m#print(data_corpus)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     38\u001b[0m             \u001b[0mvector\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mvectorizer\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfit_transform\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdata_corpus\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtodense\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 39\u001b[1;33m             \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mvector\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtoarray\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     40\u001b[0m             \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mvectorizer\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget_feature_names\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     41\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'matrix' object has no attribute 'toarray'"
      ]
     }
    ],
