--- a/Python Scripts/FullPreprocessing.ipynb
+++ b/Python Scripts/FullPreprocessing.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,7 +290,7 @@
     "        print(\"[Removing StopWords: ] \" + os.path.basename(iFile.name))\n",
     "        baseName = oPathNoExt.split(\".en\", 1)[0]\n",
     "        # print(\"BASE NAME: \", baseName)\n",
-    "        OFName = baseName + \".en_sentNoPunctNoSW.txt\"\n",
+    "        OFName = baseName + \".en_sentNoPunctNoSWAll.txt\"\n",
     "        \n",
     "        sentList = iFile.read().split('\\n')\n",
     "        \n",
@@ -299,7 +299,7 @@
     "                for sent in sentList:\n",
     "                    wordList = sent.split()\n",
     "                    for word in wordList:\n",
-    "                        if word in tinySWList:\n",
+    "                        if word in fullSWList:\n",
     "                            # if token is a stop word, don't save in the output (skip)\n",
     "                            pass\n",
     "                        else:\n",
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -429,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 14,
    "metadata": {
     "scrolled": false
    },
@@ -438,15 +438,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[Lemmatizing: ] 01_behaviors-revisited.en_stemmedbyPOS.txt\n",
       "\n",
-      "Total number of 6580 TXT files found.\n"
+      "Total number of 13 TXT files found.\n"
      ]
     }
    ],
    "source": [
     "# ----------------------------------------------- MAIN PROGRAM  -------------------------------------------------------\n",
     "\n",
-    "path = r\"C:\\Users\\ani\\Desktop\\Course data Thesis\\PROCESSED\\Coursera Downloads PreProcessed\"\n",
+    "path = r\"C:\\Users\\ani\\Desktop\\Course data Thesis\\one file\"\n",
     "\n",
     "counter = 0\n",
     "\n",
